# wit

./: .gitmodules  CMakeLists.txt  README
include/wit/: wit.hpp
test/: CMakeLists.txt  wit.cpp
